--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
       {% endfor %}
 
       <li class="sidebar-nav-item"><a href="mailto:roberto@rpedroso.com">Email</a></li>
-      <li class="sidebar-nav-item"><a href="">Resume</a></li>
+      <li class="sidebar-nav-item"><a href="/public/resume.pdf">Resume</a></li>
       <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">Github</a></li>
       <li class="sidebar-nav-item"><a href="{{ site.so.prof }}">Stack Overflow</a></li>
     </ul>
